---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/select_having.sql
snapshot_kind: text
---
CREATE TABLE test_having (a INT, b INT, c CHAR(8), d CHAR(1));

INSERT INTO test_having VALUES (0, 1, 'XXXX', 'A');

INSERT INTO test_having VALUES (1, 2, 'AAAA', 'b');

INSERT INTO test_having VALUES (2, 2, 'AAAA', 'c');

INSERT INTO test_having VALUES (3, 3, 'BBBB', 'D');

INSERT INTO test_having VALUES (4, 3, 'BBBB', 'e');

INSERT INTO test_having VALUES (5, 3, 'bbbb', 'F');

INSERT INTO test_having VALUES (6, 4, 'cccc', 'g');

INSERT INTO test_having VALUES (7, 4, 'cccc', 'h');

INSERT INTO test_having VALUES (8, 4, 'CCCC', 'I');

INSERT INTO test_having VALUES (9, 4, 'CCCC', 'j');

SELECT b, c FROM test_having GROUP BY b, c HAVING COUNT(*) = 1 ORDER BY b, c;

SELECT b, c FROM test_having GROUP BY b, c HAVING b = 3 ORDER BY b, c;

SELECT
  lower(c),
  COUNT(c)
FROM
  test_having
GROUP BY lower(c)
HAVING
  COUNT(*) > 2 OR MIN(a) = MAX(a)
ORDER BY lower(c);

SELECT c, MAX(a) FROM test_having GROUP BY c HAVING COUNT(*) > 2 OR MIN(a) = MAX(a) ORDER BY c;

SELECT MIN(a), MAX(a) FROM test_having HAVING MIN(a) = MAX(a);

SELECT MIN(a), MAX(a) FROM test_having HAVING MIN(a) < MAX(a);

SELECT a FROM test_having HAVING MIN(a) < MAX(a);

SELECT 1 AS one FROM test_having HAVING a > 1;

SELECT 1 AS one FROM test_having HAVING 1 > 2;

SELECT 1 AS one FROM test_having HAVING 1 < 2;

SELECT 1 AS one FROM test_having WHERE 1 / a = 1 HAVING 1 < 2;

DROP TABLE "test_having";
